--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ title-block-banner: false
 **질문하는 방법**
 
 - 카카오톡: [질문하러 가기](http://pf.kakao.com/_txeIFG/chat)
-- 이메일: <guebin@jbnu.ac.kr>
+- 이메일: <guebin@jbnu.ac.kr>, <gbchoi0814@gmail.com>
 - 직접방문: 자연과학대학 본관 205호 
 - Zoom: *카카오톡이나 이메일로 미리 시간을 정할 것*
 - LMS쪽지: <https://ieilms.jbnu.ac.kr/>
